fix note viewer text alignment in chrome (also works in FF)
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@22140 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -486,7 +486,7 @@
 				}
 
 				* {
-					vertical-align: middle;
+					vertical-align: text-bottom;
 				}
 
 				.name{
